# Tutorial-Ros1-Ros2-Autominy-

./: .gitignore  README.md
autominy_ros2/src/arduino_communication/: CMakeLists.txt  package.xml
autominy_ros2/src/arduino_communication/launch/: ArduinoCommunication.launch.py
autominy_ros2/src/arduino_communication/src/: ArduinoCommunication.cpp  ArduinoCommunication.h  ArduinoCommunicationNode.cpp
autominy_ros2/src/autominy/rviz/: live_rviz2.rviz
autominy_ros2/src/autominy_msgs/: CMakeLists.txt  package.xml
autominy_ros2/src/autominy_msgs/msg/: Obstacle.msg  Obstacles.msg
autominy_ros2/src/bno055_usb_stick/: CMakeLists.txt
autominy_ros2/src/bno055_usb_stick/include/bno055_usb_stick/: bno055_usb_stick.hpp
autominy_ros2/src/bno055_usb_stick/launch/: BNO055.launch.py
autominy_ros2/src/bno055_usb_stick/src/: bno055_usb_stick_node.cpp
autominy_ros2/src/lidar_pose_estimation/launch/: LidarPoseEstimation.launch.py  lidar_pose_full.launch.py
autominy_ros2/src/lidar_pose_estimation/rviz/: lidar_pose_view.rviz
autominy_ros2/src/remote_control/launch/: RemoteControl.launch.py
