<?xml version="1.0"?>
<package format="3">
  <name>autominy_msgs</name>
  <version>0.0.1</version>
  <description>Custom messages for AutoMiny</description>

  <maintainer email="s.sundermann@fu-berlin.de">Autonomos-Labs, FU Berlin</maintainer>
  <author email="s.sundermann@fu-berlin.de">Autonomos-Labs, FU Berlin</author>
  <license>proprietary</license>

  <url type="website">https://www.autonomos-labs.de/</url>

  <!-- Herramientas de compilación -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Dependencias comunes -->
  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- Dependencias en tiempo de ejecución -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Grupo de paquetes de interfaces -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

